--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-query": "^3.39.1"
+    "react-query": "^3.39.1",
+    "react-router-dom": "6"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
